--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/controllers/auth.js"></script>
         <script src="scripts/services/post.js"></script>
         <script src="scripts/services/auth.js"></script>
+        <script src="scripts/services/user.js"></script>
         <script src="scripts/filters/url.js"></script>
         <!-- endbuild -->
 </body>
