midway through chap 8, fixed url bug with commentor link on comment

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
         <script src="scripts/controllers/posts.js"></script>
         <script src="scripts/controllers/postview.js"></script>
         <script src="scripts/controllers/auth.js"></script>
+        <script src="scripts/controllers/profile.js"></script>
         <script src="scripts/services/post.js"></script>
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/user.js"></script>
