added username validation

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/user.js"></script>
         <script src="scripts/filters/url.js"></script>
+        <script src="scripts/directives/checkusername.js"></script>
         <!-- endbuild -->
 </body>
 </html>
